--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,69 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  height: 100%;
+  overflow-x: hidden;
+
+  @include mat.theme((
+    color: (
+      theme-type: dark,
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
+}
+
+html {
+  height: 100%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+mat-toolbar {
+  background-color: #202020 !important;
+}
+
+mat-sidenav-container {
+  mat-sidenav {
+    background-color: #292929 !important;
+    border-radius: 0 !important;
+  }
+
+  mat-sidenav-content {
+    background-color: #242424;
+  }
+}
+
+app-footer {
+  background-color: #202020;
+  color: gray;
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    @include mat.theme((
+      color: (
+        theme-type: light,
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    ));
+  }
+
+  mat-toolbar {
+    background-color: #f4f4f4 !important;
+  }
+
+  app-footer {
+    background-color: #f4f4f4;
+  }
+}
