--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,7 +1,9 @@
 :host {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100vw;
   padding :1rem;
+  z-index: 2;
 }
