--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,20 @@
       <mat-icon svgIcon="logo"></mat-icon>
       <div class="title">
         <h1>CodeSpotlight</h1>
-        <p>Open Source Internship Program</p>
+        <p>Open Source Internship</p>
       </div>
     </a>
   </mat-toolbar>
 
   <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="isMobile() ? 56 : 0">
-    <mat-sidenav #snav [mode]="isMobile() ? 'over' : 'side'" [opened]="isMobile() ? false : true"[fixedInViewport]="isMobile()" fixedTopGap="56">
+    <mat-sidenav #snav [mode]="isMobile() ? 'over' : 'side'" [opened]="isMobile() ? false : true"
+      [fixedInViewport]="isMobile()" fixedTopGap="56">
       <mat-nav-list>
-        @for (nav of fillerNav; track nav) {
-        <a mat-list-item>{{nav}}</a>
+        @for (nav of navItems; track nav) {
+        <a mat-list-item routerLink="{{nav.route}}" routerLinkActive="active">
+          <mat-icon>{{nav.icon}}</mat-icon>
+          <span>{{nav.name}}</span>
+        </a>
         }
       </mat-nav-list>
     </mat-sidenav>
