--- a/src/app/components/apply/apply.component.scss
+++ b/src/app/components/apply/apply.component.scss
@@ -9,11 +9,6 @@
 
   mat-horizontal-stepper {
     padding: 1rem;
-    margin-top: 1rem;
-
-    mat-step {
-
-    }
 
     mat-radio-group {
       display: flex;
@@ -44,6 +39,27 @@
       display: flex;
       justify-content: center;
       gap: 1rem;
-      padding: 2rem 1rem 0;
+      padding: 1rem 1rem 0;
+    }
+
+    .form {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      width: 100%;
+
+      .top {
+        display: flex;
+        gap: 0.5rem;
+
+        mat-form-field {
+          width: 100%;
+        }
+      }
+
+      textarea {
+        height: 7rem;
+        resize: none;
+      }
     }
   }
