--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,7 +60,7 @@ html {
 }
 
 h1, h2, h3 {
-  font-family: 'GetVoIP Grotesque', sans-serif;
+  font-family: 'GetVoIP Grotesque', sans-serif !important;
 }
 
 p, input, textarea {
