--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,14 +47,14 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 0.4rem;
 
         h1 {
           font-size: 1.5rem;
-          line-height: 1.1rem;
+          line-height: 1.6rem;
           margin: 0;
         }
         p {
+          font-family: 'GetVoIP Grotesque', sans-serif;
           font-size: 0.9rem;
           line-height: 1rem;
           margin: 0;
