--- a/src/app/components/apply/apply.component.html
+++ b/src/app/components/apply/apply.component.html
@@ -104,5 +104,6 @@
   </mat-step>
 </mat-horizontal-stepper>
 } @else {
-  <h1 class="gradient-text">Application Submitted</h1>
+  <h1 class="gradient-text">Thank You {{fullName}}</h1>
+  <h3>Your Application Was Submitted</h3>
 }
