--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,24 @@
   font-display: swap; /* Improves performance and rendering */
 }
 
+:root {
+  @include mat.dialog-overrides((
+    container-color: #303030,
+  ));
+}
+
+:root {
+  @include mat.menu-overrides((
+    container-color: #303030,
+  ));
+}
+
+:root {
+  @include mat.divider-overrides((
+    color: #474747,
+  ));
+}
+
 body {
   font-family: "Ubuntu", sans-serif;
   margin: 0;
@@ -44,7 +62,8 @@ body {
     background-color: #5a5a5a;
   }
 
-  *[mat-raised-button]:not([disabled]) {
+  *[mat-raised-button]:not([disabled]),
+  *[mat-mini-fab]{
     background: linear-gradient(135deg, #27baf8, #7578eb, #9859e5, #d722db);
     color: #f4f4f4;
     font-family: 'GetVoIP Grotesque', sans-serif;
@@ -147,6 +166,24 @@ app-footer {
 }
 
 @media (prefers-color-scheme: light) {
+  :root {
+    @include mat.dialog-overrides((
+      container-color: #ebebeb,
+    ));
+  }
+
+  :root {
+    @include mat.menu-overrides((
+      container-color: #ebebeb,
+    ));
+  }
+
+  :root {
+    @include mat.divider-overrides((
+      color: #e0e0e0,
+    ));
+  }
+
   body {
     @include mat.theme((
       color: (
