--- a/src/app/components/apply/apply.component.html
+++ b/src/app/components/apply/apply.component.html
@@ -1,3 +1,4 @@
+<div class="apply page">
 @if (!emailService.applicationSubmitted()) {
 <h1 class="gradient-text">Apply to the Internship</h1>
 <!-- Angular Material Stepper -->
@@ -107,3 +108,4 @@
   <h1 class="gradient-text">Thank You {{fullName}}</h1>
   <h3>Your Application Was Submitted</h3>
 }
+</div>
