current apply redirect local storage way

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
             <span class="gradient-text">Profile</span>
           </a>
         } @else {
-          <a mat-list-item (click)="onSignIn()">
+          <a mat-list-item (click)="onSignIn(true)">
             <mat-icon class="gradient-text">format_list_bulleted</mat-icon>
             <span class="gradient-text">Apply</span>
           </a>
